fixes form bleeding out of container

--- a/src/components/BulkAssignment/BulkAssignmentModal.module.scss
+++ b/src/components/BulkAssignment/BulkAssignmentModal.module.scss
@@ -6,6 +6,9 @@
 
 .BulkAssignmentTable {
   table {
+    table-layout: fixed;
+    width: 100%;
+
     th {
       max-width: 10px;
       text-align: center;
@@ -14,12 +17,8 @@
       text-align: center;
     }
     .BulkAssignmentAssignment {
-        width: 60px;
-        text-align: center;
+      width: 60px;
+      text-align: center;
     }
-  }
-
-  form {
-    display: inherit;
   }
 }
